--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,15 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
-    <activity android:name=".ui.activity.MainActivity">
+    <activity android:name=".ui.main.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-    <activity android:name=".ui.activity.WriteActivity"></activity>
-    <activity android:name=".ui.activity.DiaryDetailActivity">
+    <activity android:name=".ui.write.WriteActivity"></activity>
+    <activity android:name=".ui.diaryDetail.DiaryDetailActivity">
 
     </activity>
   </application>
