--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.openull.eastroots92.vacation_homework_android"
+        applicationId "com.chatty.android.chattyClient"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
