--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,9 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-    <activity android:name=".view.write.WriteActivity"></activity>
-    <activity android:name=".view.diaryDetail.DiaryDetailActivity">
-
-    </activity>
+    <activity android:name=".view.write.WriteActivity" />
+    <activity android:name=".view.diaryDetail.DiaryDetailActivity"></activity>
+    <activity android:name=".view.calendar.CalendarActivity" />
   </application>
 
 </manifest>
