--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,17 @@
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
     <activity android:name=".view.main.MainActivity">
+    </activity>
+    <activity android:name=".view.write.WriteActivity" />
+    <activity android:name=".view.diaryDetail.DiaryDetailActivity" />
+    <activity android:name=".view.calendar.CalendarActivity" />
+    <activity android:name=".view.setting.SettingActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-    <activity android:name=".view.write.WriteActivity" />
-    <activity android:name=".view.diaryDetail.DiaryDetailActivity"></activity>
-    <activity android:name=".view.calendar.CalendarActivity" />
   </application>
 
 </manifest>
