Make setFriend function
Initialize friendsSetting Activity
Set header title
Add backAction in FriendsSettingActivity
Change StateManager to StateManagerWrapper in FriendsSettingPresenter
Add friends setting layout
Add edit profile function
Make requestGetPartnersProfileDetail function
Set data in friends_setting layout, callback action later
Fix empty line
Change PartnerProfileDetailResponse class to PartnerProfileDetailEntry
Make multiline in PartenerProfile class
Change alphabetical order
Change method name
Delete empty space  and empty line
Fix multi line
Change method name

Fixes https://github.com/chatty-app/chatty-app/issues/32

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,23 +12,25 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
+    <activity
+      android:name=".view.calendar.CalendarActivity"
+      android:launchMode="singleTask"
+      android:clearTaskOnLaunch="true"/>
+    <activity
+      android:name=".view.diaryDetail.DiaryDetailActivity"
+      android:launchMode="singleTask"
+      android:clearTaskOnLaunch="true"/>
+    <activity android:name=".view.friendsSetting.FriendsSettingActivity"/>
     <activity android:name=".view.main.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
-
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+    <activity
+      android:name=".view.setting.SettingActivity"
+      android:launchMode="singleTask"
+      android:clearTaskOnLaunch="true"/>
     <activity android:name=".view.write.WriteActivity" />
-    <activity android:name=".view.diaryDetail.DiaryDetailActivity"
-      android:launchMode="singleTask"
-      android:clearTaskOnLaunch="true"/>
-    <activity android:name=".view.calendar.CalendarActivity"
-      android:launchMode="singleTask"
-      android:clearTaskOnLaunch="true"/>
-    <activity android:name=".view.setting.SettingActivity"
-      android:launchMode="singleTask"
-      android:clearTaskOnLaunch="true"></activity>
   </application>
-
 </manifest>
