--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,7 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    implementation 'gun0912.ted:tedbottompicker:1.2.6'
+    implementation 'gun0912.ted:tedpermission:2.2.1'
 }
