Connect FriendsSettingActivity to FriendsListActivity
FriendsSettingActivity와  FriendsListActivity를 연결한다.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,14 @@
       android:name=".view.diaryDetail.DiaryDetailActivity"
       android:clearTaskOnLaunch="true"
       android:launchMode="singleTask" />
-    <activity android:name=".view.friendsSetting.FriendsSettingActivity" />
-    <activity android:name=".view.friendsList.FriendsListActivity"/>
+    <activity
+      android:name=".view.friendsSetting.FriendsSettingActivity"
+      android:clearTaskOnLaunch="true"
+      android:launchMode="singleTask" />
+    <activity
+      android:name=".view.friendsList.FriendsListActivity"
+      android:clearTaskOnLaunch="true"
+      android:launchMode="singleTask" />
     <activity android:name=".view.main.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
