--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,11 +34,7 @@
       android:launchMode="singleTask" />
 
     <activity android:name=".view.main.MainActivity">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
 
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
     </activity>
     <activity
       android:name=".view.setting.SettingActivity"
@@ -49,7 +45,13 @@
       android:name=".view.write.emotion.EmotionActivity"
       android:theme="@android:style/Theme.Dialog">
     </activity>
-    <activity android:name=".view.splash.SplashActivity"></activity>
+    <activity android:name=".view.splash.SplashActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
   </application>
 
 </manifest>
