--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,9 +33,7 @@
       android:clearTaskOnLaunch="true"
       android:launchMode="singleTask" />
 
-    <activity android:name=".view.main.MainActivity">
-
-    </activity>
+    <activity android:name=".view.main.MainActivity"/>
     <activity
       android:name=".view.setting.SettingActivity"
       android:clearTaskOnLaunch="true"
